--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+:root{
+    --main-text-color: color: rgb(85, 0, 25);
+}
+
 header{
     width: 100%;
     background-color: rgb(255, 191, 212);
@@ -18,11 +22,11 @@ header nav ul li{
 header .logomarca a{
     font-size: 38px;
     font-family: 'Corinthia';
-    color: rgb(85, 0, 25);
+    color: var(--main-text-color);
 }
 
 header nav a{
     font-size: 18px;
     font-family: 'Source Sans Pro';
-    color: rgb(85, 0, 25);
+    color: var(--main-text-color);
 }
