--- a/css/header.css
+++ b/css/header.css
@@ -1,7 +1,3 @@
-:root{
-    --main-text-color: rgb(85, 0, 25);
-    --main-bg-color: rgb(255, 191, 212);
-}
 
 header{
     width: 100%;
@@ -53,12 +49,11 @@ nav.menu-mobile ul{
     left: 0;
     width: 100%;
     text-align: center;
-    padding-top: 6px;
-    background-color: var(--main-bg-color);
+    background-color: rgba(255, 179, 203, 0.815);
 }
 nav.menu-mobile ul li{
     padding: 4px 0;
-    border-bottom: 1px solid var(--main-text-color)
+    border-bottom: 1px solid var(--main-text-color);
 }
 nav.menu-mobile ul li:hover{
     background-color: rgb(255, 179, 203);
@@ -72,6 +67,8 @@ nav.menu-mobile a{
 nav.menu-mobile a:hover{
     font-weight: 700;
 }
+
+
 @media screen and (max-width:768px){
     .logomarca{
         flex: 1;
